# ASE_RACE

AMiRo-Apps/: Makefile  README.md  license.html  setup.sh
AMiRo-Apps/configurations/: Makefile  apps.mk
AMiRo-Apps/developer.arm.com/: GetEula?Id=8ac44eb9-6905-4ac6-8d1d-4f016a2b9f73.tmp.tmp
AMiRo-Apps/docs/: AMiRo-Apps.uml  Tutorial.md
AMiRo-Apps/messagetypes/: DWD_accodata.h  DWD_compassdata.h  DWD_floordata.h  DWD_gravitydata.h  DWD_gyrodata.h  DWD_magnodata.h  LightRing_leddata.h  Motor_motordata.h  ProximitySensordata.h  TouchSensordata.h  amirostatus.h  chargedata.h  motiondata.h  positiondata.h  remoteInputService.h  remotedata.h
AMiRo-Apps/middleware/: apps_urtosal.c  apps_urtosal.h  middleware.mk  middlewaresetup.sh
AMiRo-Apps/os/: os.mk  ossetup.sh
GCC/xyz/: arm-none-eabi-ar  arm-none-eabi-as  arm-none-eabi-c++  arm-none-eabi-gcc  arm-none-eabi-gcc-9.3.1  arm-none-eabi-gcc-nm  arm-none-eabi-gcc-ranlib  arm-none-eabi-gcov-dump  arm-none-eabi-gdb  arm-none-eabi-gdb-py  arm-none-eabi-gprof  arm-none-eabi-ld.bfd  arm-none-eabi-objcopy  arm-none-eabi-objdump  arm-none-eabi-readelf  arm-none-eabi-size  arm-none-eabi-strings
amiro-esp/: README.md
amiro-esp/clients/ros2_amiro_ws/src/amiro_ros_msgs/: CMakeLists.txt  package.xml
amiro-esp/clients/ros2_amiro_ws/src/amiro_ros_msgs/msg/: FloorProximity.msg  Gyroscope.msg  RingProximity.msg
amiro-esp/clients/ros2_amiro_ws/src/amiro_ros_msgs/srv/: DMCTarget.srv  Light.srv  ResetOdometry.srv
amiro-esp/firmware/: CMakeLists.txt  platformio.ini  sdkconfig.az-delivery-devkit-v4  sdkconfig.az-delivery-devkit-v4.old
(+4893 files in other folders)
